--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "watch": "^1.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "gh-pages": "^3.1.0",
     "react-router-dom": "^5.2.0"
   }
 }
